--- a/pkmn/app/views/pkms/index.html.erb
+++ b/pkmn/app/views/pkms/index.html.erb
@@ -4,9 +4,14 @@
 
 <%= form_tag pkms_path, method: 'get' do %>
     <p>
-      <%= select_tag :region_id, options_from_collection_for_select(Region.all, :id, :name, params[:region_id]), :include_blank => 'All' %>
+      <%= text_field_tag :search, params[:search], :placeholder => 'comp_id' %>
+      <%= link_to 'Ajuda', render 'ajuda', remote: true %>
       <%= submit_tag :'Search', :name => nil %>
     </p>
+<!--    <p>
+      <%= select_tag :region_id, options_from_collection_for_select(Region.all, :id, :name, params[:region_id]), :include_blank => 'All' %>
+      <%= submit_tag :'Search', :name => nil %>
+    </p>-->
 <% end %>
 
 
