--- a/pkmn/app/views/layouts/application.html.erb
+++ b/pkmn/app/views/layouts/application.html.erb
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Pkmn</title>
-    <%= csrf_meta_tags %>
+<head>
+  <title>Pkmn</title>
+  <%= csrf_meta_tags %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <%= yield %>
-  </body>
+<body>
+<%= render 'shared/navigation' %>
+
+<div id="main-container" class="container">
+
+  <div class="row">
+    <div class="col-xs-12">
+      <% flash.each do |name, msg| -%>
+          <%= content_tag :div, msg, class: "alert alert-#{name}" %>
+      <% end -%>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-3">
+      <h3>Tealeaf Academy Todo</h3>
+    </div>
+    <div class="col-xs-9">
+      <%= yield %>
+    </div>
+  </div>
+</div>
+</body>
 </html>
