--- a/FusedLocation/app/src/main/res/layout/activity_main.xml
+++ b/FusedLocation/app/src/main/res/layout/activity_main.xml
@@ -25,17 +25,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:id="@+id/textView_longitude"
-        android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <Button
-        android:text="Ver no mapa"
+        android:text="Reiniciar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button_get_coords"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="39dp"
-        android:id="@+id/button_show_map" />
+        android:id="@+id/button_reset" />
 
 </RelativeLayout>
