--- a/TrainingDay/app/src/main/res/layout/activity_imagery.xml
+++ b/TrainingDay/app/src/main/res/layout/activity_imagery.xml
@@ -42,4 +42,24 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="52dp"
         android:id="@+id/button_enviar_fotos" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageButton_foto1"
+        android:layout_alignLeft="@+id/imageButton_foto1"
+        android:layout_alignStart="@+id/imageButton_foto1"
+        android:layout_marginTop="31dp"
+        android:id="@+id/textView_latitude_foto1" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView_longitude_foto1"
+        android:layout_below="@+id/textView_latitude_foto1"
+        android:layout_alignRight="@+id/imageButton_foto1"
+        android:layout_alignEnd="@+id/imageButton_foto1"
+        android:layout_marginTop="19dp" />
 </RelativeLayout>
