--- a/TrainingDay/app/src/main/res/layout/activity_main.xml
+++ b/TrainingDay/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,12 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:id="@+id/button_imagery" />
+
+    <Button
+        android:text="CheckMate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/button_check_mate" />
 </RelativeLayout>
