--- a/TrainingDay/app/src/main/res/layout/activity_which_jsonto_post.xml
+++ b/TrainingDay/app/src/main/res/layout/activity_which_jsonto_post.xml
@@ -16,16 +16,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView_json_to_post"
-        android:layout_marginTop="170dp"
         android:layout_below="@+id/imageView_foto_64"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="200dp"
         app:srcCompat="@android:drawable/btn_dialog"
         android:id="@+id/imageView_foto_64"
+        android:layout_width="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
