--- a/pkmn/app/assets/stylesheets/application.css.scss
+++ b/pkmn/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,6 @@
  *= require_self
  */
 
-@import "bootstrap-sprockets"
-@import "bootstrap"
-@import "jquery-ui"
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import "jquery-ui";
