--- a/TrainingDay/app/src/main/res/layout/activity_main.xml
+++ b/TrainingDay/app/src/main/res/layout/activity_main.xml
@@ -53,4 +53,13 @@
         android:layout_alignTop="@+id/button_drawer"
         android:layout_centerHorizontal="true"
         android:id="@+id/button_grid" />
+
+    <Button
+        android:id="@+id/button_refresher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/button_grid"
+        android:text="Refresher" />
 </RelativeLayout>
