--- a/TrainingDay/app/src/main/res/menu/menu_swiper.xml
+++ b/TrainingDay/app/src/main/res/menu/menu_swiper.xml
@@ -7,4 +7,10 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_refresh"
+        android:icon="@drawable/ic_refresh_black_24dp"
+        android:title="@string/menu_refresh"
+        app:showAsAction="ifRoom"/>
 </menu>
