--- a/training_day/app/views/fotos/index.html.erb
+++ b/training_day/app/views/fotos/index.html.erb
@@ -14,14 +14,10 @@
     <% @fotos.each do |foto| %>
       <tr>
         <td><%= foto.nome %></td>
-        <td><%= link_to 'Show', foto %></td>
-        <td><%= link_to 'Edit', edit_foto_path(foto) %></td>
-        <td><%= link_to 'Destroy', foto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= image_tag foto.image_url(:thumb).to_s %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Foto', new_foto_path %>
+<p> <%= link_to 'Nova foto', [:new, @imageable, :foto] %> </p>
